--- a/Info2.plist
+++ b/Info2.plist
@@ -23,6 +23,6 @@
 	<key>CFBundleVersion</key>
 	<string>1.1</string>
 	<key>NSMainNibFile</key>
-	<string>MainWindow</string>
+	<string>MainWindow2</string>
 </dict>
 </plist>
