--- a/Info2.plist
+++ b/Info2.plist
@@ -8,8 +8,15 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
+    	<key>CFBundleIconFiles</key>
+        <array>
+            <string>Icon.png</string>
+            <string>Icon@2x.png</string>
+            <string>Icon-72.png</string>
+            <string>Icon-Small.png</string>
+            <string>Icon-Small-50.png</string>
+            <string>Icon-Small@2x.png</string>
+        </array>
 	<key>CFBundleIdentifier</key>
 	<string>com.yourcompany.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -21,8 +28,10 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>NSMainNibFile</key>
 	<string>MainWindow2</string>
+	<key>UILaunchImageFile</key>
+	<string>Default2.png</string>
 </dict>
 </plist>
